fix: delete bag- text-wrap

--- a/src/app/pages/board-page/board-page.component.scss
+++ b/src/app/pages/board-page/board-page.component.scss
@@ -12,6 +12,8 @@
   background-image: url("./../../../assets/img/light-fon.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  overflow: hidden;
+  word-break: break-all;
 }
 
 .board-page__container-title {
@@ -29,7 +31,7 @@
 }
 
 .board-page__description {
-  margin-bottom: 5px;
+  margin-bottom: 15px;
   font-size: 18px;
   color: $description-color;
 }
@@ -116,7 +118,7 @@
   }
 
   .board-page__description {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     font-size: 16px;
   }
 
